fix: wrap modal close SVGs in buttons

--- a/styles.css
+++ b/styles.css
@@ -1911,9 +1911,14 @@ iframe {
 
 .close-icon {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 20px;
   right: 20px;
   fill: var(--dark);
+  background-color: transparent;
+  border: none;
   cursor: pointer;
 }
 
